Add unit tests to increase coverage